// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeInput renders correctly for all CodeInputStatus states 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 2`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      Object {
        "elevation": 5,
        "shadowColor": "rgba(48, 46, 37, 0.15)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
      Array [
        Object {
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 16,
          "paddingBottom": 4,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          label
        </Text>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="visible-password"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            placeholder="placeholder"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "flex": 1,
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingHorizontal": 0,
                  "paddingVertical": 12,
                },
                undefined,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value="test"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 3`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          Object {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#1AB775"
          hidesWhenStopped={true}
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 4`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          Object {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#1AB775"
          hidesWhenStopped={true}
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 5`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          Object {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={32}
          style={Object {}}
          viewBox="0 0 32 32"
          width={32}
        >
          <path
            d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
            fill="#42D689"
            style={Object {}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;
